Fix breaking css - newjed.css contains a lot of code that overwrites standard joomla css. Font Family and font weight overwrite caused icons to break on jed views.

--- a/src/media/com_jed/css/newjed.css
+++ b/src/media/com_jed/css/newjed.css
@@ -6240,10 +6240,8 @@ th .tooltip-inner {
  width:14px;
  height:14px;
  *margin-right:.3em;
- font-family:'icomoon-joomla';
  -webkit-font-smoothing:antialiased;
  font-style:normal;
- font-weight:normal;
  line-height:14px;
  line-height:1;
  text-transform:none;
